--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,7 @@
             "email": "tariqwalji@yahoo.co.uk"
         }
     ],
-    "require": {}
+    "require": {
+        "phpunit/phpunit": "^9.1"
+    }
 }
